# api/swagger.yaml
@@ -1,7 +1,7 @@
 ---
 swagger: "2.0"
 info:
-  description: "API for interfacing with NewsMaker backend"
+  description: "API for interfacing with NewsMaker service"
   version: "1.0.0"
   title: "NewsMaker"
   termsOfService: "http://newsmaker.azurewebsites.net/terms/"
@@ -21,6 +21,208 @@ consumes:
 produces:
 - "application/json"
 paths:
+  /cats:
+    get:
+      description: "Returns all cats from the system that the user has access to"
+      operationId: "findCats"
+      produces:
+      - "application/json"
+      - "application/xml"
+      - "text/xml"
+      - "text/html"
+      parameters:
+      - name: "query"
+        in: "query"
+        description: "query to filter by"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "csv"
+      - name: "limit"
+        in: "query"
+        description: "maximum number of results to return"
+        required: false
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "cats response"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/cat"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+    post:
+      description: "Creates a new cat."
+      operationId: "addCat"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "cat"
+        description: "Post to add"
+        required: true
+        schema:
+          $ref: "#/definitions/cat"
+      responses:
+        200:
+          description: "cat response"
+          schema:
+            $ref: "#/definitions/cat"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+  /cats/{id}:
+    get:
+      description: "Returns a cat based on a single ID, if the user does not have\
+        \ access to the cat"
+      operationId: "getCatByID"
+      produces:
+      - "application/json"
+      - "application/xml"
+      - "text/xml"
+      - "text/html"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of cat to fetch"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "cat response"
+          schema:
+            $ref: "#/definitions/cat"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+    delete:
+      description: "deletes a single cat based on the ID supplied"
+      operationId: "deleteCat"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of cat to delete"
+        required: true
+        type: "string"
+      responses:
+        204:
+          description: "cat deleted"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+  /feeds:
+    get:
+      description: "Returns all feeds from the system that the user has access to"
+      operationId: "findFeeds"
+      produces:
+      - "application/json"
+      - "application/xml"
+      - "text/xml"
+      - "text/html"
+      parameters:
+      - name: "query"
+        in: "query"
+        description: "query to filter by"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "csv"
+      - name: "limit"
+        in: "query"
+        description: "maximum number of results to return"
+        required: false
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "feeds response"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/feed"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+    post:
+      description: "Creates a new feed."
+      operationId: "addFeed"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "feed"
+        description: "Post to add"
+        required: true
+        schema:
+          $ref: "#/definitions/feed"
+      responses:
+        200:
+          description: "feed response"
+          schema:
+            $ref: "#/definitions/feed"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+  /feeds/{id}:
+    get:
+      description: "Returns a feed based on a single ID, if the user does not have\
+        \ access to the feed"
+      operationId: "getFeedByID"
+      produces:
+      - "application/json"
+      - "application/xml"
+      - "text/xml"
+      - "text/html"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of feed to fetch"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "feed response"
+          schema:
+            $ref: "#/definitions/feed"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
+    delete:
+      description: "deletes a single feed based on the ID supplied"
+      operationId: "deleteFeed"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of feed to delete"
+        required: true
+        type: "string"
+      responses:
+        204:
+          description: "feed deleted"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "Default"
   /posts:
     get:
       description: "Returns all posts from the system that the user has access to"
@@ -31,9 +233,9 @@ paths:
       - "text/xml"
       - "text/html"
       parameters:
-      - name: "tags"
+      - name: "query"
         in: "query"
-        description: "tags to filter by"
+        description: "query to filter by"
         required: false
         type: "array"
         items:
@@ -58,8 +260,8 @@ paths:
             $ref: "#/definitions/errorModel"
       x-swagger-router-controller: "Default"
     post:
-      description: "Creates a new post in the store.  Duplicates are allowed"
-      operationId: "addPet"
+      description: "Creates a new post."
+      operationId: "addPost"
       produces:
       - "application/json"
       parameters:
@@ -68,7 +270,7 @@ paths:
         description: "Post to add"
         required: true
         schema:
-          $ref: "#/definitions/newPost"
+          $ref: "#/definitions/post"
       responses:
         200:
           description: "post response"
@@ -83,7 +285,7 @@ paths:
     get:
       description: "Returns a post based on a single ID, if the user does not have\
         \ access to the post"
-      operationId: "findPetById"
+      operationId: "getPostByID"
       produces:
       - "application/json"
       - "application/xml"
@@ -92,7 +294,7 @@ paths:
       parameters:
       - name: "id"
         in: "path"
-        description: "ID of pet to fetch"
+        description: "ID of post to fetch"
         required: true
         type: "integer"
         format: "int64"
@@ -125,31 +327,68 @@ paths:
             $ref: "#/definitions/errorModel"
       x-swagger-router-controller: "Default"
 definitions:
+  cat:
+    type: "object"
+    required:
+    - "catName"
+    properties:
+      id:
+        type: "string"
+      catName:
+        type: "string"
+  feed:
+    type: "object"
+    required:
+    - "catID"
+    - "feedName"
+    - "feedSite"
+    - "feedURL"
+    properties:
+      id:
+        type: "string"
+      catID:
+        type: "string"
+      feedName:
+        type: "string"
+      feedSite:
+        type: "string"
+      feedURL:
+        type: "string"
   post:
     type: "object"
     required:
-    - "id"
-    - "name"
+    - "date"
+    - "feedID"
+    - "link"
+    - "title"
     properties:
       id:
         type: "integer"
         format: "int64"
-      name:
+      title:
         type: "string"
-      tag:
+      summary:
         type: "string"
-  newPost:
-    type: "object"
-    required:
-    - "name"
-    properties:
-      id:
+      date:
+        type: "string"
+        format: "dateTime"
+      author:
+        type: "string"
+      link:
+        type: "string"
+      categories:
+        type: "array"
+        items:
+          type: "string"
+      feedID:
+        type: "string"
+      feedName:
+        type: "string"
+      catID:
+        type: "string"
+      unixtime:
         type: "integer"
         format: "int64"
-      name:
-        type: "string"
-      tag:
-        type: "string"
   errorModel:
     type: "object"
     required:
